# labnocturne-image-client

./: .gitignore  LICENSE  README.md  composer.json
.claude/: instructions.md
.claude/commands/: test-example.md
.claude/skills/delete/: SKILL.md
.claude/skills/files/: SKILL.md
.claude/skills/generate-key/: SKILL.md
.claude/skills/image-delete/: SKILL.md
.claude/skills/image-files/: SKILL.md
.claude/skills/image-key/: SKILL.md
.claude/skills/image-stats/: SKILL.md
examples/python/: README.md
examples/ruby/: README.md
flex/: CLAUDE.md  go.mod  main.go
flex/cmd/: migrate.go  root.go  serve.go
flex/db/: db.go
framework/: architecture.md
framework/cmd/: migrate.go  serve.go
go/: README.md  go.mod
go/labnocturne/: client.go
images/: .air.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
images/cmd/: migrate.go  root.go  serve.go  worker.go
integrations/chatgpt-action/: README.md  openapi.yaml
javascript/: README.md  package.json
javascript/src/: client.js  index.js
javascript/types/: index.d.ts
php/: README.md  composer.json
php/src/: LabNocturneClient.php
python/: README.md  pyproject.toml  setup.py
python/labnocturne/: __init__.py  client.py
rggolfdesign.com/: Dockerfile  Makefile  go.mod  go.sum
rggolfdesign.com/cmd/: serve.go
rggolfdesign.com/db/: db.go
rggolfdesign.com/design-previews/: README.md  option1-bold-athletic.html  option2-industrial-modern.html  option3-dark-powerful.html  option4-whiskey-lounge.html
ruby/: README.md  labnocturne.gemspec
ruby/lib/: labnocturne.rb
(+90 files in other folders)
