[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labnocturne"
version = "1.0.0"
description = "Python client for Lab Nocturne Images API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Lab Nocturne", email = "support@labnocturne.com"}
]
keywords = ["images", "cdn", "upload", "storage", "api", "labnocturne"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/jjenkins/labnocturne-image-client"
Repository = "https://github.com/jjenkins/labnocturne-image-client"
Documentation = "https://github.com/jjenkins/labnocturne-image-client/tree/main/python"
"Bug Tracker" = "https://github.com/jjenkins/labnocturne-image-client/issues"
